tests/bad/B_LocalVariableBinding.ml
let f x = 3 ;;

let z = f(0) in (z == 3);;

z;;